--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,6 +14,6 @@ services:
       - /app/node_modules
       - ./:/app
     environment:
-      - DEMO=demo
+      - DB_URI=mongodb://mymongo:27017/ods
     ports:
       - '3000:3000'
